Updated borken links on the footer section

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -421,204 +421,4 @@
 
     <script src="../src/script.js"></script>
   </body>
-</html>
-
-    </main>
-
-    <footer class="bg-[#001200] text-gray-300 font-sans anton">
-      <!-- Partners Section -->
-      <div class="text-gray-800 py-16 px-6 md:px-16">
-        <h2 class="text-2xl md:text-3xl text-white text-center uppercase mb-4">
-          Our Partners
-        </h2>
-        <p class="mb-8 poppins text-center text-white">
-          Wologisi FC is proud to be supported by our corporate partners who
-          share our commitment to excellence. Our partnerships strengthen the
-          bond between football and community, creating a platform for shared
-          success. We extend our gratitude to all our sponsors for their
-          valuable contributions to the Dubai United FC family.
-        </p>
-
-        <!-- Partner Logos -->
-        <div class="relative w-full overflow-hidden">
-          <div
-            class="flex flex-wrap justify-center items-center gap-10 md:gap-16 mt-10 animate-marquee whitespace-nowrap"
-          >
-            <div class="flex items-center gap-16 marquee-group">
-              <img
-                src="../Wologisi_FC/partners/1xbet.png"
-                alt="Partner 1"
-                class="h-12 md:h-16 grayscale hover:grayscale-0 transition-all duration-300"
-              />
-              <img
-                src="./Wologisi_FC/partners/betto.png"
-                alt="Partner 2"
-                class="h-12 md:h-16 grayscale hover:grayscale-0 transition-all duration-300"
-              />
-              <img
-                src="../Wologisi_FC/partners/img.jpg"
-                alt="Partner 3"
-                class="h-12 md:h-16 grayscale hover:grayscale-0 transition-all duration-300"
-              />
-              <img
-                src="../Wologisi_FC/partners/starbet.webp"
-                alt="Partner 4"
-                class="h-12 md:h-16 grayscale hover:grayscale-0 transition-all duration-300"
-              />
-              <img
-                src="../Wologisi_FC/partners/images.png"
-                alt="Partner 4"
-                class="h-12 md:h-16 grayscale hover:grayscale-0 transition-all duration-300"
-              />
-            </div>
-            <div class="flex items-center gap-16 marquee-group">
-              <img
-                src="../Wologisi_FC/partners/1xbet.png"
-                alt="Partner 1"
-                class="h-12 md:h-16 grayscale hover:grayscale-0 transition-all duration-300"
-              />
-              <img
-                src="../Wologisi_FC/partners/betto.png"
-                alt="Partner 2"
-                class="h-12 md:h-16 grayscale hover:grayscale-0 transition-all duration-300"
-              />
-              <img
-                src="../Wologisi_FC/partners/img.jpg"
-                alt="Partner 3"
-                class="h-12 md:h-16 grayscale hover:grayscale-0 transition-all duration-300"
-              />
-              <img
-                src="../Wologisi_FC/partners/starbet.webp"
-                alt="Partner 4"
-                class="h-12 md:h-16 grayscale hover:grayscale-0 transition-all duration-300"
-              />
-              <img
-                src="../Wologisi_FC/partners/images.png"
-                alt="Partner 4"
-                class="h-12 md:h-16 grayscale hover:grayscale-0 transition-all duration-300"
-              />
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Footer Navigation -->
-      <div
-        class="py-16 px-6 md:px-16 grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-10 border-t border-gray-700"
-      >
-        <div>
-          <h3 class="text-2xl text-white mb-4 uppercase">WFC</h3>
-          <ul class="space-y-2">
-            <li>
-              <a href="#" class="hover:text-white text-lg text-white"
-                >Wologisi Fc</a
-              >
-            </li>
-          </ul>
-        </div>
-
-        <!-- Media -->
-        <div>
-          <h3 class="text-2xl text-white mb-4 uppercase">Media</h3>
-          <ul class="space-y-2 poppins">
-            <li><a href="#" class="hover:text-green-400">Video</a></li>
-            <li><a href="#" class="hover:text-green-400">Calendar</a></li>
-            <li>
-              <a href="#" class="hover:text-green-400">League Table</a>
-            </li>
-            <li><a href="#" class="hover:text-green-400">Schedule</a></li>
-            <li><a href="#" class="hover:text-green-400">Results</a></li>
-          </ul>
-        </div>
-
-        <!-- Club -->
-        <div>
-          <h3 class="text-white mb-4 uppercase text-2xl">Club</h3>
-          <ul class="space-y-2 poppins">
-            <li><a href="contact.html" class="hover:text-green-400">Contact Us</a></li>
-            <li><a href="#" class="hover:text-green-400">Team</a></li>
-            <li><a href="#" class="hover:text-green-400">First Team</a></li>
-            <li><a href="#" class="hover:text-green-400">Second Team</a></li>
-          </ul>
-        </div>
-
-        <!-- Info -->
-        <div>
-          <h3 class="text-2xl text-white mb-4 uppercase">Info</h3>
-          <ul class="space-y-2 poppins">
-            <li>
-              <a
-                href="#"
-                class="hover:text-green-300 duration-200 transition-all ease-in-out"
-                >Terms & Conditions</a
-              >
-            </li>
-            <li>
-              <a
-                href="#"
-                class="hover:text-green-300 duration-200 transition-all ease-in-out"
-                >Legal Terms</a
-              >
-            </li>
-            <li>
-              <a
-                href="#"
-                class="hover:text-green-300 duration-200 transition-all ease-in-out"
-                >Privacy Policy</a
-              >
-            </li>
-            <li>
-              <a
-                href="#"
-                class="hover:text-green-300 duration-200 transition-all ease-in-out"
-                >Cookies</a
-              >
-            </li>
-            <li>
-              <a
-                href="#"
-                class="hover:text-green-300 duration-200 transition-all ease-in-out"
-                >Accessibility</a
-              >
-            </li>
-            <li>
-              <a
-                href="#"
-                class="hover:text-green-300 duration-200 transition-all ease-in-out"
-                >Support / FAQ</a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
-
-      <!-- Bottom Bar -->
-      <div
-        class="border-t border-gray-700 text-center py-6 px-6 md:px-16 flex flex-col md:flex-row justify-between items-center gap-4"
-      >
-        <p class="text-sm text-white">
-          &copy; 2025 Wologisi FC. All Rights Reserved.
-        </p>
-        <div class="flex gap-4">
-          <a
-            href="#"
-            class="text-white hover:text-green-300 duration-200 ease-in-out transition-all"
-            ><i class="fa-brands fa-facebook"></i
-          ></a>
-          <a
-            href="#"
-            class="text-white hover:text-green-300 duration-200 ease-in-out transition-all"
-            ><i class="fa-brands fa-instagram"></i
-          ></a>
-          <a
-            href="#"
-            class="text-white hover:text-green-300 duration-200 ease-in-out transition-all"
-            ><i class="fa-brands fa-youtube"></i
-          ></a>
-        </div>
-      </div>
-    </footer>
-
-    <script src="../src/script.js"></script>
-  </body>
-</html>
+</html
